<resources>
    <string name="app_name">test2</string>
    <string name="marathi">1. मराठी</string>
    <string name="hindi">2. हिंदी</string>
    <string name="english">3. English</string>
    <string name="login">Login</string>
    <string name="audio">4. Audio</string>
    <string name="video">2. Video</string>
    <string name="text">3. Text</string>
    <string name="image">1. Image</string>
    <string name="newquery">1. New Query</string>
    <string name="faq">2. FAQ</string>
    <string name="reply">3. Replies</string>
    <string name="upload">UPLOAD</string>
    <string name="langtest">Please Select Your Language</string>
    <string name="location">Get Location</string>
    <string name="textReply">Your reply in text will be uploaded here</string>
    <string name="imageReply">Image Reply</string>
    <string name="videoReply">Video Reply</string>
    <string name="description">Please Enter your mobile number in which you want your query to be adressed also press the get location button so as get proper advice from expert and then finally press login to continue</string>
</resources>
